chore: comments fixed

--- a/nodejs/Makefile
+++ b/nodejs/Makefile
@@ -6,7 +6,7 @@ MAKEFLAGS += --silent
 SHELL != sh -c "command -v node"
 # tell make which commandline options to apply for shell invocation
 .SHELLFLAGS := --experimental-modules --input-type=module -e
-# => now every shell invocation make by make will be nodejs 
+# => from now on every shell invocation by make will be nodejs
 
 # .ONESHELL tells make to execute a target recipe as a single SHELL call
 # (by default make would execute a receipt line by line in single SHELL calls
@@ -14,14 +14,14 @@ SHELL != sh -c "command -v node"
 
 # et voilà : the receipt can now be written in plain modern javascript :-)
 all: foo
-	// access make target name
+	// access make variables
 	console.log("target name is '$@', depends on '$^'");
 
 	import {readdir } from 'node:fs/promises';
 	console.log(await readdir('..'));
 
 foo:
-	// access make target name
+	// access make variables
 	console.log("target name is '$@', depends on '$^'");
 
 	console.log("node version is ", process.version);
