dcos: updated readme templates

--- a/sqlite/Makefile
+++ b/sqlite/Makefile
@@ -4,26 +4,29 @@ MAKEFLAGS += --silent
 # make sqlite the "shell" for make recipes
 SHELL != sh -c "command -v sqlite3"
 # empty default shell commandline options to apply for shell invocation
-.SHELLFLAGS := -echo -bail -separator ; -header -interactive db.sqlite3
+.SHELLFLAGS := -bail -separator ; -batch -header db.sqlite3 
 # => from now on every shell invocation by make will be sqlite
 
 # .ONESHELL tells make to execute a target recipe as a single SHELL call
 # (by default make would execute a receipt line by line in separate SHELL calls
 .ONESHELL:
 
-# et voilà : the receipt can now be written in plain modern javascript :-)
-all: insert import create
-	.mode column
+# et voilà : receipts can now be written in pure sqlite syntax :-)
+all: create insert import report
+	.print "# target name is '$@', depends on '$^'\n"
+
+report: 
 	SELECT * FROM foo
 
-# .mode csv
-# .separator ;
-# .import ./data.csv tmp_foo
-# INSERT INTO foo(name, familyname) SELECT * FROM tmp_foo
-import: create data.csv 
-	DROP TABLE IF EXISTS data;
+merge_data: import_data
+	INSERT INTO foo(name, familyname) 
+		SELECT * FROM data;
+	DROP TABLE IF EXISTS data
+
+import_data: create data.csv 
 	.import data.csv data
-	INSERT INTO foo(name, familyname) SELECT * FROM data;
+	
+import: import_data merge_data;
 
 insert: create
 	INSERT INTO foo 
@@ -35,10 +38,14 @@ insert: create
 	INSERT INTO foo (name, familyname) VALUES ('John', 'Doe')
 
 create: 
-	CREATE TABLE IF NOT EXISTS foo (id INTEGER PRIMARY KEY AUTOINCREMENT, name STRING, familyname STRING)
+	CREATE TABLE 
+		IF NOT EXISTS 
+	foo 
+		(id INTEGER PRIMARY KEY AUTOINCREMENT, name STRING, familyname STRING)
 
 clean:
 	DROP TABLE IF EXISTS foo
+	DROP TABLE IF EXISTS data
 
 # tell make that these targets are NOT meant to be files/directories
-.PHONY: all create insert import clean
+.PHONY: all create insert import clean import import_data merge_data
