--- a/python/Makefile
+++ b/python/Makefile
@@ -8,10 +8,10 @@ SHELL != sh -c "command -v python"
 # => from now on every shell invocation by make will be python
 
 # .ONESHELL tells make to execute a target recipe as a single SHELL call
-# (by default make would execute a receipt line by line in separate SHELL calls
+# (by default make would execute a recipe line by line in separate SHELL calls
 .ONESHELL:
 
-# et voilà : the receipt can now be written in pure python :-)
+# et voilà : the recipe can now be written in pure python :-)
 all: foo	
 	# use some make variables
 	print "# target name is '$@', depends on '$^'"
