--- a/sqlite/README.md.template
+++ b/sqlite/README.md.template
@@ -30,7 +30,7 @@ Change to this directory and execute
 $Makefile
 ```
 
-If you execute the example by executing `make` in a terminal you will get the following output (SQLite3 version may differ depending on what version you've installed)
+If you run the example by executing `make` in a terminal you will get the following output (SQLite3 version may differ depending on what version you've installed)
 
 ```
 $Output
