--- a/nodejs/README.md.template
+++ b/nodejs/README.md.template
@@ -22,7 +22,7 @@ Change to this directory and execute `make`
 $Makefile
 ```
 
-If you execute the example by executing `make` in a terminal you will get the following output (NodeJS version may differ depending on what version you've installed)
+If you run the example by executing `make` in a terminal you will get the following output (NodeJS version may differ depending on what version you've installed)
 
 ```
 $Output
