--- a/python/README.md.template
+++ b/python/README.md.template
@@ -18,7 +18,7 @@ Change to this directory and execute `make`
 $Makefile
 ```
 
-If you execute the example by executing `make` in a terminal you will get the following output (Python version may differ depending on what version you've installed)
+If you run the example by executing `make` in a terminal you will get the following output (Python version may differ depending on what version you've installed)
 
 ```
 $Output
