--- a/php/README.md.template
+++ b/php/README.md.template
@@ -2,7 +2,7 @@
 Makefile=$(cat Makefile) RecipeprefixSection=$(cat ../recipeprefix.md) Output=$('make') envsubst <<'EOL'
 # Makefile using PHP as recipe shell
 
-__This example was contributed by [Thomas Rose/codeispoetry](https://github.com/codeispoetry)__
+_This example was contributed by [Thomas Rose/codeispoetry](https://github.com/codeispoetry)._
 
 ## Prerequisites
 
